# order-metrics

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/order_metrics/: cli.py  db.py  read_sql.py  render.py
src/order_metrics/sql/: country_paid_metrics.sql  monthly_paid_metrics.sql  top_products_by_item_revenue.sql
src/order_metrics/sql/checks/: check_no_join_fanout_revenue.sql  check_paid_users_le_paid_orders.sql  naive_join_revenue.sql
tests/: conftest.py
tests/integration/: test_cmd_print.py  test_run_query.py
tests/python/unit/: test_read_sql.py  test_render_table.py
tests/sql/: test_fanout.py  test_metrics.py
